refactor(domain): apply additional Gemini review feedback
Phase 2: Code Quality Improvements (MEDIUM Priority)

1. hasResourceId() isBlank() 사용
   - 파일: AuditLog.java:470
   - 변경: trim().isEmpty() → isBlank()
   - 효과: 코드 간결성 및 가독성 향상

Skipped Items:
- IpAddress InetAddress.getByName() (HIGH): DNS 조회로 인한 성능 저하
- IpAddress isIpv4/isIpv6 간소화 (MEDIUM): HIGH 전제조건 미충족